--- a/index.html
+++ b/index.html
@@ -4,10 +4,47 @@
 <meta charset="UTF-8">
 <meta http-equiv="refresh" content="5;url=https://itcircle.22web.org/">
 <title>Redirecting...</title>
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    background-color: #f4f4f4;
+    color: #333;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+  }
+  
+  .container {
+    text-align: center;
+  }
+  
+  h1 {
+    font-size: 24px;
+    margin-bottom: 20px;
+    color: #333;
+  }
+  
+  p {
+    font-size: 16px;
+    margin-bottom: 20px;
+    color: #666;
+  }
+  
+  a {
+    color: #007bff;
+    text-decoration: none;
+  }
+</style>
 </head>
 <body>
-<p>The website is moved to <a href="https://itcircle.22web.org/">https://itcircle.22web.org</a> 
-  You are being redirected ...</p>
+<div class="container">
+  <h1>Redirecting...</h1>
+  <p>The website has moved to <a href="https://itcircle.22web.org/">https://itcircle.22web.org</a>.</p>
+  <p>You are being redirected...</p>
+</div>
 <script> 
 setTimeout(function() {
     window.location.href = 'https://itcircle.22web.org/';
