--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta http-equiv="refresh" content="5;url=https://itcircle.22web.org/">
-<title>Redirecting...</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Website Under Construction</title>
 <style>
   body {
     font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-    color: #333;
+    background-color: #f2f2f2;
     margin: 0;
     padding: 0;
     display: flex;
@@ -16,39 +15,40 @@
     align-items: center;
     height: 100vh;
   }
-  
   .container {
     text-align: center;
   }
-  
   h1 {
-    font-size: 24px;
-    margin-bottom: 20px;
+    font-size: 36px;
     color: #333;
-  }
-  
-  p {
-    font-size: 16px;
     margin-bottom: 20px;
-    color: #666;
   }
-  
-  a {
-    color: #007bff;
-    text-decoration: none;
+  p {
+    font-size: 18px;
+    color: #666;
+    margin-bottom: 40px;
+  }
+  .spinner {
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    border: 3px solid #333;
+    border-radius: 50%;
+    border-top-color: #28a745;
+    animation: spin 1s ease-in-out infinite;
+  }
+  @keyframes spin {
+    to {
+      transform: rotate(360deg);
+    }
   }
 </style>
 </head>
 <body>
-<div class="container">
-  <h1>Redirecting...</h1>
-  <p>The website has moved to <a href="https://itcircle.22web.org/">https://itcircle.22web.org</a>.</p>
-  <p>You are being redirected...</p>
-</div>
-<script> 
-setTimeout(function() {
-    window.location.href = 'https://itcircle.22web.org/';
-}, 2000); 
-</script>
+  <div class="container">
+    <h1>Website Under Construction</h1>
+    <p>We're working hard to bring you an amazing new website.</p>
+    <div class="spinner"></div>
+  </div>
 </body>
 </html>
